fix table spacing

--- a/app/assets/stylesheets/copycat_engine.css
+++ b/app/assets/stylesheets/copycat_engine.css
@@ -20,6 +20,7 @@ div#copycat {
   padding-top: 2em;
 }
 #copycat table {
+  width: 100%;
   border-bottom: 1px #CCC dotted;
   padding-bottom: 1em;
 }
